support for prefixes

--- a/example.tex
+++ b/example.tex
@@ -1,12 +1,17 @@
 \documentclass{article}
+\usepackage[utf8x]{inputenc}
+\usepackage{lmodern}
+\usepackage[T1]{fontenc}
+
 \usepackage[]{rdfatex}
+\prefix{cal}{http://www.w3.org/2002/12/cal/ical\#}
 \begin{document}
 \section{Nazdar}
 
 Tohle je pokus s rdfa a tex4ht. 
 
 \begin{subject}{pokus}
-Nazdar svete
+Nazdar světe
 
 \begin{subject}{nazdar}
 tak jedem?
