--- a/example.tex
+++ b/example.tex
@@ -14,7 +14,7 @@ Tohle je pokus s rdfa a tex4ht.
 Nazdar světe
 
 \begin{subject}{nazdar}
-tak jedem?
+\property{cal:summary}{tak jedem?}
 \end{subject}
 
 \end{subject}
