--- a/rdfatex.sty
+++ b/rdfatex.sty
@@ -2,8 +2,13 @@
 \ProvidesPackage{rdfatex.sty}
 % 
 \edef\rdf@xmlns{xmlns="http://www.w3.org/1999/xhtml"}
-\newcommand\prefix[2]{\xdef\rdf@xmlns{\rdf@xmlns\ xmlns:#1="#2"}}
+\def\rdf@xmlns@separator{ }
+\newcommand\prefix[2]{\xdef\rdf@xmlns{\rdf@xmlns\rdf@xmlns@separator xmlns:#1="#2"}}
 
 \def\rdf@subject{.}
 \newcommand\setSubject[1]{\def\rdf@subject{#1}}
 \newenvironment{subject}[1]{\bigskip\hrule\setSubject{#1}}{\hrule\bigskip}
+
+\newcommand\property[2]{%
+#2\marginpar{#1}
+}
