now working with tex4ht

--- a/example.tex
+++ b/example.tex
@@ -5,12 +5,13 @@
 
 \usepackage[]{rdfatex}
 \prefix{cal}{http://www.w3.org/2002/12/cal/ical\#}
+\prefix{dc}{http://purl.org/dc/elements/1.1/}
 \begin{document}
 \section{Nazdar}
 
 Tohle je pokus s rdfa a tex4ht. 
 
-\begin{subject}{pokus}
+\begin{subject}{dc:}
 Nazdar světe
 
 \begin{subject}{nazdar}
